# bot-trade

./: .env.example  .gitignore  .ruff.toml  CHANGE_NOTES.md  DEV_NOTES.md  Dockerfile  Dockerfile.smoke  GUID.txt  MIGRATION.md  Makefile  PyTorch.py  README.md  Train_ML.py  Train_RL.py  VERSION  app.py  autolearn.py  binance_klines_feather.py  bot_loop.py  bot_loop_ml.py  config.yaml  continue_train_agent.py  dashboard.py  data_aggregator.py  data_process_log.txt  data_utils.py  env_config.py  env_trading.py  evaluate_model.py  evaluate_model_metrics.py  generate_historical_trades.py  latest_state.json  market_data.py  ml_strategy.py  model_evaluation_log.csv  mypy.ini  playlist.yaml  prepare_data_ready.py  pyproject.toml  requirements.txt  (+15 more)
.devcontainer/: devcontainer.json
BTCUSDT/: events.out.tfevents.1756173662.standora.12812.0  events.out.tfevents.1756174247.standora.9240.0  events.out.tfevents.1756175591.standora.10404.0  events.out.tfevents.1756181128.standora.624.0  events.out.tfevents.1756185422.standora.8460.0
agents/: best_model.txt
ai_core/: ai_dashboard.py  dashboard_io.py  entry_verifier.py
backUP/: prepare_binance_clean.py  prepare_binance_dataset.py  prepare_binance_dataset2.py  prepare_binance_dataset_optimized.py  prepare_binance_dataset_split.py  tick_feature_generator.py  train_model.py  train_rl.py
backtest/: execution_layer.py
bot_trade/: __version__.py  rl_builders.py  run_bot.py  run_multi_gpu.py  run_rl_agent.py  train_rl.py
config/: __init__.py  adaptive.yml  config.default.yaml  config.example.yaml  config.yaml  default.yaml  (+30 more)
(+332 files in other folders)
