[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-trade"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bot-monitor = "bot_trade.tools.monitor_manager:main"

[tool.setuptools.packages.find]
include = ["bot_trade", "bot_trade.*"]
